--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -176,9 +176,11 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="BigQueryDataReader.cs" />
+    <Compile Include="BigQueryDbType.cs" />
     <Compile Include="BigQueryException.cs" />
     <Compile Include="BigQueryParameter.cs" />
     <Compile Include="BigQueryParameterCollection.cs" />
+    <Compile Include="Native\GoogleApiExceptionHelper.cs" />
     <Compile Include="Native\DataStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BigQueryCommandTestsBase.cs" />
@@ -187,10 +189,7 @@
     <Compile Include="Tests\BigQueryConnectionTests.cs" />
     <Compile Include="Tests\BigQueryParametersCollectionTests.cs" />
     <Compile Include="Tests\BigQueryParameterTests.cs" />
-    <Compile Include="BigQueryTypeConverter.cs" />
-    <Compile Include="Tests\BigQueryTestsBase.cs" />
-    <Compile Include="Tests\BigQueryTestsOAuth.cs" />
-    <Compile Include="Tests\BigQueryTestsP12.cs" />
+    <Compile Include="Native\BigQueryTypeConverter.cs" />
     <Compile Include="Tests\BigQueryTypeConverterTests.cs" />
     <Compile Include="Tests\ConnectionStringHelper.cs" />
     <Compile Include="Tests\DataTableComparer.cs" />
