--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -182,6 +182,7 @@
     <Compile Include="BigQueryParameterCollection.cs" />
     <Compile Include="Native\GoogleApiExceptionHelper.cs" />
     <Compile Include="Native\DataStore.cs" />
+    <Compile Include="Native\ObjectUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BigQueryCommandTestsBase.cs" />
     <Compile Include="Tests\BigQueryCommandTestsOAuth.cs" />
