--- a/EntityFramework7/EntityFramework7.csproj
+++ b/EntityFramework7/EntityFramework7.csproj
@@ -32,10 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.DataAccess.BigQuery, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DevExpress.DataAccess.BigQuery.1.0.7.0\lib\net45\DevExpress.DataAccess.BigQuery.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="EntityFramework.Core, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.Core.7.0.0-beta7\lib\net45\EntityFramework.Core.dll</HintPath>
       <Private>True</Private>
@@ -138,6 +134,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Interactive.Async, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Ix-Async.1.2.5\lib\net45\System.Interactive.Async.dll</HintPath>
@@ -160,6 +157,22 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.assert, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.assert.2.1.0\lib\dotnet\xunit.assert.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.core, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.extensibility.core.2.1.0\lib\dotnet\xunit.core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.execution.desktop, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.extensibility.execution.2.1.0\lib\net45\xunit.execution.desktop.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, PublicKeyToken=431cba815f6a8b5b, processorArchitecture=MSIL">
       <HintPath>..\packages\Zlib.Portable.Signed.1.11.0\lib\portable-net4+sl5+wp8+win8+wpa81+MonoTouch+MonoAndroid\Zlib.Portable.dll</HintPath>
       <Private>True</Private>
@@ -176,7 +189,7 @@
     <Compile Include="Metadata\BigQueryAnnotationNames.cs" />
     <Compile Include="Metadata\BigQueryMetadataExtensionProvider.cs" />
     <Compile Include="Metadata\IBigQueryEntityTypeAnnotations.cs" />
-    <Compile Include="Metadata\INpgsqlPropertyAnnotations.cs" />
+    <Compile Include="Metadata\IBigQueryPropertyAnnotations.cs" />
     <Compile Include="Migrations\BigQueryMigrationsAnnotationProvider.cs" />
     <Compile Include="Migrations\BigQueryHistoryRepository.cs" />
     <Compile Include="Migrations\BigQueryMigrationsSqlGenerator.cs" />
@@ -194,6 +207,7 @@
     <Compile Include="Query\BigQueryQueryCompilationContext.cs" />
     <Compile Include="Query\BigQueryQuerySqlGenerator.cs" />
     <Compile Include="Strings.Designer.cs" />
+    <Compile Include="Tests\EntityTests.cs" />
     <Compile Include="Update\BigQueryModificationCommandBatch.cs" />
     <Compile Include="Update\BigQueryModificationCommandBatchFactory.cs" />
     <Compile Include="Utilities\AsyncEnumerableExtensions.cs" />
@@ -208,6 +222,12 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BigQueryProvider\DevExpress.DataAccess.BigQuery.csproj">
+      <Project>{85af87dc-9b3e-434e-990a-6e6605c23fe0}</Project>
+      <Name>DevExpress.DataAccess.BigQuery</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
