--- a/EntityFramework7/app.config
+++ b/EntityFramework7/app.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <add name="bigqueryConnectionStringP12" connectionString="PrivateKeyFileName=..\..\..\p12key.p12;ProjectID=projectID;DataSetId=dataSetId;ServiceAccountEmail=serviceAccountEmail" />
+    <add name="bigqueryConnectionStringOAuth" connectionString="ProjectID=projectID;DataSetId=dataSetId;OAuthClientId=oAuthClientId;OAuthClientSecret=oAuthClientSecret;OAuthRefreshToken=oAuthRefreshToken" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
