--- a/EntityFramework7/packages.config
+++ b/EntityFramework7/packages.config
@@ -26,5 +26,11 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Remotion.Linq" version="2.0.0-beta-002" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" />
+  <package id="xunit" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net46" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net46" />
 </packages>
