--- a/EntityFramework7/EntityFramework7.csproj
+++ b/EntityFramework7/EntityFramework7.csproj
@@ -220,7 +220,9 @@
     <Compile Include="ValueGeneration\BigQueryValueGeneratorCache.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
