--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
@@ -21,5 +21,6 @@
   <files>
     <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.dll" target="lib\net45\" />
     <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.pdb" target="lib\net45\" />
+    <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.xml" target="lib\net45\" />
   </files>
 </package>
