--- a/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
+++ b/BigQueryProvider/DevExpress.DataAccess.BigQuery.csproj
@@ -168,6 +168,7 @@
     </None>
     <EmbeddedResource Include="Tests\natality.csv" />
     <EmbeddedResource Include="Tests\natality2.csv" />
+    <EmbeddedResource Include="Tests\times.csv" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
